--- a/ripper/ripper.Rmd
+++ b/ripper/ripper.Rmd
@@ -18,17 +18,19 @@ library(Amelia)
 library(PerformanceAnalytics)
 library(caret)
 
+##FUNCIONES AUXILIARES:
+
 # funcion para generar el archivo con el envio a kaggle. Argumentos:
 # @param path ruta donde se quiere almacenar
 # @param file nombre del archivo donde almacenar los datos
 # @param cdataset conjunto de datos a almacenar
-escrituraDatos <- function(y, file = "envio", path = "./"){
+generarEnvio = function(y, file = "envio.csv", path = "./"){
   # se compone el path completo
   pathCompleto <- paste(path,file,sep="")
   
   # se escribe el archivo
   cat(paste("Id","Prediccion\n", sep = ","), file=pathCompleto)
-  write.csv(as.data.frame(cbind(1:length(y), y)), pathCompleto, row.names = FALSE)
+  write.table(as.data.frame(cbind(1:length(y), y)), pathCompleto, sep = ",", row.names = FALSE, col.names = FALSE, append = TRUE)
 }
 ```
 
