--- a/knn/knn.Rmd
+++ b/knn/knn.Rmd
@@ -43,8 +43,8 @@ generarEnvio2 = function(y,file="envio.csv",path="./"){
 ```
 
 ```{r}
-datos <- read.csv("data/train.csv",na.strings=c(" ","NA","?"))
-test <- read.csv("data/test.csv",na.strings=c(" ","NA","?"))
+datos <- read.csv("../train.csv",na.strings=c(" ","NA","?"))
+test <- read.csv("../test.csv",na.strings=c(" ","NA","?"))
 ```
 
 #Visión preliminar de los datos
@@ -136,6 +136,7 @@ test_pred
 ```
 
 ```{r}
-generarEnvio2(y=test_pred)
+generarEnvio(y=test_pred,file="envioSamu.csv")
+generarEnvio2(y=test_pred,file="envioCarmen.csv")
 ```
 
