--- a/knn/knn.Rmd
+++ b/knn/knn.Rmd
@@ -176,8 +176,8 @@ test1.correlation <- test[,subset.correlation]
 Comprobar modelo con datos de test
 
 ```{r}
-test_pred <- knn(train = datos1.correlation[,-ncol(datos)], test = datos1.correlation[,-ncol(datos)],cl = datos1.correlation$C, k=3)
-accuracy <- length(which(test_pred == datos1.correlation$C))/nrow(datos1.correlation)
+train_pred <- knn(train = datos1.correlation[,-ncol(datos)], test = datos1.correlation[,-ncol(datos)],cl = datos1.correlation$C, k=3)
+accuracy <- length(which(train_pred == datos1.correlation$C))/nrow(datos1.correlation)
 accuracy
 ```
 
